--- a/cookbook/book.toml
+++ b/cookbook/book.toml
@@ -1,6 +1,13 @@
 [book]
-authors = ["Harshil Jani"]
+authors = ["Toby Harding<me@tobin.cc>", "Einherjar <realeinherjar@proton.me>"]
 language = "en"
 multilingual = false
 src = "src"
 title = "Rust Bitcoin Cookbook"
+description = "A cookbook for Rust Bitcoin development"
+
+[rust]
+edition = "2021"
+
+[preprocessor.keeper]
+command = "mdbook-keeper" # mdbook-keeper allows us to test code examples in the book
