--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ site/.hugo_build.lock
 
 # mdbook build
 cookbook/book
+cookbook/tests/Cargo.lock
+cookbook/tests/target
+cookbook/tests/src
 site/static/book
